# RAGzilla

./: .gitignore  README.md  pyproject.toml  requirements.txt  results.json
src/the_bot/: main.py
src/the_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/the_bot/agents/: core.py  utils.py
src/the_bot/agents/tools/: __init__.py  analyze_csv_file.py  analyze_excel_file.py  download_file_from_url.py  extract_text_from_image.py  math.py  multimodal.py  query_database.py  save_and_read_file.py  search.py  summarize_text.py
src/the_bot/api/: client.py
tests/agents/: test_core.py
tests/agents/tools/: test_math.py  test_search.py  test_summarize_text.py
