[project]
name = "the_bot"
version = "0.1.0"
authors = [{ name = "Guillaume Alleon", email = "guillaume.alleon@gmail.com" }]
license = "Apache-2.0"
readme = "README.md"
description = "the_bot is a mere agentic experiment"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "arxiv>=2.2.0",
    "beautifulsoup4>=4.13.4",
    "click",
    "gradio[oauth]>=5.26.0",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.4",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "langchain-tavily>=0.1.6",
    "langgraph>=0.4.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pgvector>=0.4.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "supabase>=2.15.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "transformers>=4.50.0",
    "webdriver-manager>=4.0.2",
    "wikipedia>=1.4.0",
    "yt-dlp>=2025.4.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff",
    "pre-commit"
]

[project.scripts]
the_bot_cli = "the_bot.cli:cli"

[build-system]
requires = [
    "setuptools>=61.0",
    "ninja",
    "packaging",
    "setuptools>=61",
    "setuptools-scm>=8.0",
    "torch >= 2.6.0",
    "wheel",
    "jinja2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (imports)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    #"C90",  # mccabe complexity
]

[tool.ruff.lint.per-file-ignores]
"src/the_bot/agents/tools/search.py" = ["E501"]
"src/the_bot/agents/core.py" = ["E501"]
"src/the_bot/agents/utils.py" = ["E501"]
"src/the_bot/main.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 120

[tool.uv]
default-groups = []
no-build-isolation-package = ["flash-attn"]

[tool.pyright]
venvPath = "."
venv = ".venv"
